env/code_53e747e2a35e4/stderr.txt
  File "main.py", line 21
    raise ValueError, "Dijkstra: found better path to already-final vertex"
                    ^
SyntaxError: invalid syntax
